# Jarvis_Vs_Extension

./: .gitignore
jarvis/: .dockerignore  .gitignore  dockerfile  package-lock.json  package.json  recorder_proto_build.bat  text_into_commands_proto_build.bat
jarvis/src/: controllers.ts  cursor_handler.ts  extension.ts  listenToCommands.ts  recorder_client.ts  server.ts  text_into_commands_client.ts
jarvis/src/protos/: record_transcriber.proto  record_transcriber.ts  text_into_commands.ts
jarvis/src/protos/record_transcriber/: Empty.ts  RecordAndTranscribeResponse.ts  RecordTranscriber.ts
jarvis/src/protos/text_to_commands/: Command.ts  TextToCommands.ts  TextToCommandsRequest.ts  TextToCommandsResponse.ts
protos/: text_into_commands.proto
recorder_transcriber/: 55461_audio.json  55461_audio.srt  55461_audio.tsv  55461_audio.txt  55461_audio.vtt  94639_audio.json  proto_gen.bat  pyproject.toml
recorder_transcriber/protos/: record_transcriber_pb2.py  record_transcriber_pb2_grpc.py
recorder_transcriber/recorder_transcriber/: __main__.py  controller.py
recorder_transcriber/recorder_transcriber/transcriber/: service.py
text_into_commands/: protog_gen.bat  pyproject.toml
text_into_commands/protos/: text_into_commands.proto  text_into_commands_pb2.py  text_into_commands_pb2_grpc.py
text_into_commands/tests/: __init__.py
text_into_commands/text_into_commands/: __main__.py  agent.py  command_service.py  controller.py  service.py
